--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,40 +6,28 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: 172.64.105.187
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id002
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 142.4.112.149
-    port: 443
+    server: 183.237.20.146
+    port: 44002
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
-    tls: true
+    tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695177062956
-      headers:
-        host: www.67023582.xyz
+    network: tcp
+  - &id002
+    name: 🇷🇪_RE_留尼汪
+    type: ss
+    server: 45.59.170.13
+    port: 443
+    password: VNewBypasser2023
+    cipher: aes-256-ctr
   - &id003
-    name: 🇺🇸_US_美国_2
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
     type: vmess
-    server: 192.74.234.211
-    port: 31315
+    server: 120.226.50.94
+    port: 40702
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
@@ -47,36 +35,159 @@ proxies:
     skip-cert-verify: true
     network: tcp
   - &id004
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 8880
-    cipher: auto
-    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
-    alterId: 0
-    tls: false
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: 14.18.106.137
+    port: 41929
+    udp: true
+    password: 09833a6f-4d46-426e-87fe-7793a5489f84
+    sni: nl01.lovehjq.xyz
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
-      headers:
-        host: fr7.tehme100.fun
+    network: tcp
   - &id005
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: datacenter.ct.01.biqibao.site
-    port: 2052
+    server: 156.225.67.48
+    port: 45493
     cipher: auto
-    uuid: 4931e941-77c6-4144-a8b9-5c252ee36c30
+    uuid: 3ca912da-6ac2-418f-b9cf-45b6f694579b
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 45.199.138.164
+    port: 48944
+    cipher: auto
+    uuid: 65ea6727-4461-47a7-a5c4-fef2c67f2f79
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 183.240.232.81
+    port: 33271
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: 183.233.187.233
+    port: 49553
+    cipher: auto
+    uuid: 770ee730-2450-4e3c-a6c6-3932bd32afbd
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇭🇰_HK_香港
+    type: vmess
+    server: hkt.123ddns.xyz
+    port: 55455
+    cipher: auto
+    uuid: d2ce45e6-9f22-492d-d81d-d639067a7583
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hkt.123ddns.xyz
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: trojan
+    server: 14.18.108.108
+    port: 41929
+    udp: true
+    password: 09833a6f-4d46-426e-87fe-7793a5489f84
+    sni: nl01.lovehjq.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: fd.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /public?ed=4096
+      path: /
       headers:
-        host: de.biqibao.site
-  - &id006
+        host: xn3.shabijichang.com
+  - &id012
+    name: 🇰🇷_KR_韩国_1
+    type: ss
+    server: 13.125.112.9
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: vmess
+    server: 120.226.50.94
+    port: 53300
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 45.199.138.180
+    port: 54885
+    cipher: auto
+    uuid: d3133484-f2bf-4b0c-8d38-f8e645b65687
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: sbl4.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl4.shabijichang.com
+  - &id016
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+    type: vmess
+    server: cdn.chigua.tk
+    port: 80
+    cipher: auto
+    uuid: 7e7f8398-bd39-49d8-9ce6-e48ffef463dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /2TokGE9A/
+      headers:
+        host: us6.cachexy.cf
+  - &id017
     name: 🇫🇷_FR_法国
     type: trojan
     server: 51.91.11.29
@@ -85,305 +196,39 @@ proxies:
     password: e0d44ae7-cb7d-4acc-a8c0-9861a6f5eaad
     skip-cert-verify: true
     network: tcp
-  - &id007
-    name: 🇵🇱_PL_波兰
-    type: trojan
-    server: 51.83.186.142
-    port: 80
-    udp: true
-    password: 555034c8-6420-45d0-893c-905c02342150
-    sni: pl1.trojanvh.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
-    type: vmess
-    server: 162.159.243.53
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id009
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 107.167.16.34
-    port: 45592
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_3
-    type: vmess
-    server: 172.67.211.253
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id011
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.17.77.6
-    port: 2052
-    cipher: auto
-    uuid: 23bea995-d5db-4530-85d1-ddb2082e1811
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public
-      headers:
-        host: de.biqibao.site
-  - &id012
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
-    type: vmess
-    server: sg1.wyhkaa0.cf
-    port: 80
-    cipher: auto
-    uuid: f4575c03-8145-4612-a1b2-7a48117f6fc2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: sg1.wyhkaa0.cf
-  - &id013
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 34.kccic2pa.xyz
-    port: 50034
-    cipher: auto
-    uuid: a310fa79-63de-408f-92d5-3385a08a7061
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇯🇵_JP_日本
+  - &id018
+    name: 🇰🇷_KR_韩国_2
     type: ss
-    server: 54.178.48.89
+    server: 43.202.63.42
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id015
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 16.kccic2pa.xyz
-    port: 50016
-    cipher: auto
-    uuid: a310fa79-63de-408f-92d5-3385a08a7061
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 01.kccic2pa.xyz
-    port: 50001
-    cipher: auto
-    uuid: a310fa79-63de-408f-92d5-3385a08a7061
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: 104.25.255.254
-    port: 443
-    cipher: auto
-    uuid: 927094d3-d678-4763-8591-e240d0bcae87
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vuk2.0bad.com/chat
-      headers:
-        host: sub2.saintink.eu.org
-  - &id018
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 198.2.207.115
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695177062956
-      headers:
-        host: www.63763079.xyz
   - &id019
-    name: 🇨🇷_CR_哥斯达黎加->🇮🇳_IN_印度
-    type: vmess
-    server: 190.93.245.8
-    port: 443
-    cipher: auto
-    uuid: 99357805-2332-4548-95d7-73bf03c24599
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jp.denny.cf
-  - &id020
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 198.2.216.197
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695118717355
-      headers:
-        host: www.29303416.xyz
-  - &id021
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 198.2.192.154
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695177062956
-      headers:
-        host: www.78280643.xyz
-  - &id022
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 09.kccic2pa.xyz
-    port: 50009
-    cipher: auto
-    uuid: a310fa79-63de-408f-92d5-3385a08a7061
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 20.kccic2pa.xyz
-    port: 50020
-    cipher: auto
-    uuid: a310fa79-63de-408f-92d5-3385a08a7061
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 45.199.138.166
-    port: 39351
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 55928
-    password: f149711f-19fd-4af5-92ea-524b1c4efcac
-    cipher: chacha20-ietf-poly1305
-  - &id026
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 45.199.138.196
-    port: 30448
-    cipher: auto
-    uuid: fe5f69e7-e183-439b-950b-9661ef0651f2
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 24961
-    password: f149711f-19fd-4af5-92ea-524b1c4efcac
-    cipher: chacha20-ietf-poly1305
-  - &id028
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
     type: trojan
-    server: ufxeq-1080-tr-9.d-kcd.tuil.xyz
-    port: 39929
+    server: rpete-1096-tr-3.r-kcd-e.iote.bond
+    port: 29989
     udp: true
     password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: edge.cjhh.mom
+    sni: cdn.cjhh.lol
     skip-cert-verify: true
     network: tcp
-  - &id029
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
+  - &id020
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
-    server: ihine-1083-v2-1.r-kcd-b.tuil.xyz
-    port: 29968
+    server: dx1.992688.xyz
+    port: 8080
     cipher: auto
-    uuid: a590e692-4c8d-42dd-ba80-b1765a34f699
+    uuid: cafbdf1c-5812-492f-92ac-330650c6ecf0
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /je5x3pBN1vez3NQudNkB
+      path: /?ed=2048
       headers:
-        host: ihine-1083-v2-1.r-kcd-b.tuil.xyz
-  - &id030
-    name: 🇺🇸_US_美国_10
-    type: trojan
-    server: 209.216.77.26
-    port: 443
-    udp: true
-    password: 3550ce3dec
-    sni: usa3.connecton.surf
-    skip-cert-verify: true
-    network: tcp
-  - &id031
-    name: 🇺🇸_US_美国_11
-    type: trojan
-    server: usa3.connecton.surf
-    port: 443
-    udp: true
-    password: 3550ce3dec
-    skip-cert-verify: true
-    network: tcp
-  - &id032
+        host: eu1.vpn66.eu.org
+  - &id021
     name: 🇯🇵_JP_日本->🇸🇬_SG_新加坡
     type: trojan
     server: 1gzdx2.156786.xyz
@@ -393,110 +238,6 @@ proxies:
     sni: hkmax06.170203.xyz
     skip-cert-verify: true
     network: tcp
-  - &id033
-    name: 🇨🇳_CN_中国
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 54455
-    password: f149711f-19fd-4af5-92ea-524b1c4efcac
-    cipher: chacha20-ietf-poly1305
-  - &id034
-    name: 🇰🇷_KR_韩国
-    type: ss
-    server: 43.201.56.43
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id035
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_4
-    type: vmess
-    server: 172.67.149.100
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id036
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: sg.wyhkaa0.cf
-    port: 80
-    cipher: auto
-    uuid: 0ba28c05-7bd9-4cad-c329-482386a8e7a3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: sg.wyhkaa0.cf
-  - &id037
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 172.64.229.116
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /XQ2WCa29jfDMGBcbnQ
-      headers:
-        host: netherlands.yj2022.gq
-  - &id038
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 104.21.70.14
-    port: 8080
-    cipher: auto
-    uuid: 6735fcf0-7846-4259-bc31-f4f905a92750
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: se1.xv2ray.net
-  - &id039
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
-    type: vmess
-    server: cf.yx.alue.link
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id040
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: us2.mianfenyun012.eu.org
-    port: 8080
-    cipher: auto
-    uuid: a8966719-aeaf-4886-d202-72f75f845b83
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /jdbp606
-      headers:
-        host: us2.mianfenyun012.eu.org
 proxy-groups:
   - name: PROXY
     type: select
@@ -544,25 +285,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -589,25 +311,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
   - name: SELECT
     type: select
     proxies:
@@ -632,25 +335,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
