--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,120 +6,69 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 183.237.20.146
-    port: 44002
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇷🇪_RE_留尼汪
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
     type: ss
-    server: 45.59.170.13
-    port: 443
-    password: VNewBypasser2023
-    cipher: aes-256-ctr
+    server: shdxyh.xn--fiqr9egvchy8d.com
+    port: 29903
+    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
+    cipher: chacha20-ietf-poly1305
+  - &id002
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 55928
+    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
+    cipher: chacha20-ietf-poly1305
   - &id003
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
-    type: vmess
-    server: 120.226.50.94
-    port: 40702
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 54455
+    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
+    cipher: chacha20-ietf-poly1305
   - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: 14.18.106.137
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    sni: nl01.lovehjq.xyz
-    skip-cert-verify: true
-    network: tcp
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_4
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 24962
+    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
+    cipher: chacha20-ietf-poly1305
   - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ss
+    server: starspeed.tbh.iosds.com
+    port: 47120
+    password: 45fbf02e-b550-456d-b14a-bf123410e997
+    cipher: chacha20-ietf-poly1305
+  - &id006
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
+    type: ss
+    server: starspeed.tbh.iosds.com
+    port: 25854
+    password: 45fbf02e-b550-456d-b14a-bf123410e997
+    cipher: chacha20-ietf-poly1305
+  - &id007
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 156.225.67.48
-    port: 45493
-    cipher: auto
-    uuid: 3ca912da-6ac2-418f-b9cf-45b6f694579b
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 45.199.138.164
-    port: 48944
-    cipher: auto
-    uuid: 65ea6727-4461-47a7-a5c4-fef2c67f2f79
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 183.240.232.81
-    port: 33271
+    server: 142.0.129.249
+    port: 443
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 183.233.187.233
-    port: 49553
-    cipher: auto
-    uuid: 770ee730-2450-4e3c-a6c6-3932bd32afbd
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇭🇰_HK_香港
-    type: vmess
-    server: hkt.123ddns.xyz
-    port: 55455
-    cipher: auto
-    uuid: d2ce45e6-9f22-492d-d81d-d639067a7583
-    alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/1695380351751
       headers:
-        host: hkt.123ddns.xyz
-  - &id010
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: trojan
-    server: 14.18.108.108
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    sni: nl01.lovehjq.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+        host: www.64830206.xyz
+  - &id008
+    name: 🇺🇸_US_美国->🇻🇳_VN_越南
     type: vmess
-    server: fd.shabijichang.com
-    port: 80
+    server: Tokyo.mfa.ee
+    port: 2052
     cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    uuid: 992889a7-296e-4a44-98c2-0eb89af4411d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -127,108 +76,169 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: xn3.shabijichang.com
-  - &id012
-    name: 🇰🇷_KR_韩国_1
+        host: vnpt.iiio.wiki
+  - &id009
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
     type: ss
-    server: 13.125.112.9
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    server: shdxyh.xn--fiqr9egvchy8d.com
+    port: 38954
+    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
+    cipher: chacha20-ietf-poly1305
+  - &id010
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_5
+    type: ss
+    server: sh-zz-xx.newbluecloud.top
+    port: 17179
+    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
+    cipher: chacha20-ietf-poly1305
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: shdxyh.xn--fiqr9egvchy8d.com
+    port: 12363
+    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
+    cipher: chacha20-ietf-poly1305
+  - &id012
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_6
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 24961
+    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
+    cipher: chacha20-ietf-poly1305
   - &id013
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_7
+    type: ss
+    server: starspeed.tbh.iosds.com
+    port: 26963
+    password: 45fbf02e-b550-456d-b14a-bf123410e997
+    cipher: chacha20-ietf-poly1305
+  - &id014
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 120.226.50.94
-    port: 53300
+    server: 142.4.112.150
+    port: 443
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.180
-    port: 54885
-    cipher: auto
-    uuid: d3133484-f2bf-4b0c-8d38-f8e645b65687
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /path/1695380351751
+      headers:
+        host: www.67023582.xyz
   - &id015
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: sbl4.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl4.shabijichang.com
-  - &id016
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: vmess
-    server: cdn.chigua.tk
-    port: 80
-    cipher: auto
-    uuid: 7e7f8398-bd39-49d8-9ce6-e48ffef463dd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /2TokGE9A/
-      headers:
-        host: us6.cachexy.cf
-  - &id017
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 51.91.11.29
-    port: 80
-    udp: true
-    password: e0d44ae7-cb7d-4acc-a8c0-9861a6f5eaad
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇰🇷_KR_韩国_2
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: ss
-    server: 43.202.63.42
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    server: shdxyh.xn--fiqr9egvchy8d.com
+    port: 42797
+    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_8
+    type: ss
+    server: shdxyh.xn--fiqr9egvchy8d.com
+    port: 40998
+    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
+    cipher: chacha20-ietf-poly1305
+  - &id017
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
     type: trojan
-    server: rpete-1096-tr-3.r-kcd-e.iote.bond
-    port: 29989
+    server: zjpvc-1083-tr-0.r-kcd-b.tuil.xyz
+    port: 29969
     udp: true
     password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
     sni: cdn.cjhh.lol
     skip-cert-verify: true
     network: tcp
-  - &id020
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: dx1.992688.xyz
-    port: 8080
-    cipher: auto
-    uuid: cafbdf1c-5812-492f-92ac-330650c6ecf0
-    alterId: 0
-    tls: false
+  - &id018
+    name: 🇨🇦_CA_加拿大_1
+    type: trojan
+    server: 108.181.24.47
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 20-24-33-134.nhost.00cdn.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: eu1.vpn66.eu.org
+    network: tcp
+  - &id019
+    name: 🇨🇦_CA_加拿大_2
+    type: trojan
+    server: 108.181.23.123
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇯🇵_JP_日本
+    type: ss
+    server: 43.207.233.98
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
   - &id021
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: 163.123.192.80
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 4-193-163-88.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 163.123.192.79
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 4-193-163-88.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇨🇦_CA_加拿大_3
+    type: trojan
+    server: 108.181.23.231
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇨🇦_CA_加拿大_4
+    type: trojan
+    server: 108.181.22.249
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 4-193-163-88.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇨🇦_CA_加拿大_5
+    type: trojan
+    server: 108.181.23.241
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇨🇦_CA_加拿大_6
+    type: trojan
+    server: 108.181.23.71
+    port: 443
+    udp: true
+    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
+    sni: 4-193-163-88.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id027
     name: 🇯🇵_JP_日本->🇸🇬_SG_新加坡
     type: trojan
     server: 1gzdx2.156786.xyz
@@ -238,6 +248,131 @@ proxies:
     sni: hkmax06.170203.xyz
     skip-cert-verify: true
     network: tcp
+  - &id028
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    type: trojan
+    server: rpete-1096-tr-3.r-kcd-e.iote.bond
+    port: 29989
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: cdn.cjhh.lol
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: ahsorathiyaa.fly.dev
+    port: 443
+    cipher: auto
+    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ahsorathiyaa.fly.dev
+  - &id030
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: yd1.992688.xyz
+    port: 8880
+    cipher: auto
+    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: vceu3.vpn66.eu.org
+  - &id031
+    name: 🇭🇰_HK_香港
+    type: vmess
+    server: 156.245.8.248
+    port: 41671
+    cipher: auto
+    uuid: 964bf499-9ec0-4378-92b6-87d8d861b2d0
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 137.175.18.84
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1695380351751
+      headers:
+        host: www.66273264.xyz
+  - &id033
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 45.199.138.219
+    port: 55007
+    cipher: auto
+    uuid: 130c9f2e-42b1-4ebf-b345-e26456a061f9
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id034
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: vmess
+    server: 36.137.179.162
+    port: 50007
+    cipher: auto
+    uuid: 120cadf2-e254-4069-97b2-acd33cfc4f3f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 45.199.138.214
+    port: 44478
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id036
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: 36.140.102.11
+    port: 50020
+    cipher: auto
+    uuid: 120cadf2-e254-4069-97b2-acd33cfc4f3f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id037
+    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
+    type: vmess
+    server: cf.yx.alue.link
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: lu.wx.alue.link
 proxy-groups:
   - name: PROXY
     type: select
@@ -285,6 +420,22 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -311,6 +462,22 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
   - name: SELECT
     type: select
     proxies:
@@ -335,6 +502,22 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
