--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,69 +6,74 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
-    type: ss
-    server: shdxyh.xn--fiqr9egvchy8d.com
-    port: 29903
-    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
-    cipher: chacha20-ietf-poly1305
-  - &id002
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 55928
-    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
-    cipher: chacha20-ietf-poly1305
-  - &id003
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 54455
-    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
-    cipher: chacha20-ietf-poly1305
-  - &id004
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_4
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 24962
-    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
-    cipher: chacha20-ietf-poly1305
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ss
-    server: starspeed.tbh.iosds.com
-    port: 47120
-    password: 45fbf02e-b550-456d-b14a-bf123410e997
-    cipher: chacha20-ietf-poly1305
-  - &id006
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: ss
-    server: starspeed.tbh.iosds.com
-    port: 25854
-    password: 45fbf02e-b550-456d-b14a-bf123410e997
-    cipher: chacha20-ietf-poly1305
-  - &id007
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
-    server: 142.0.129.249
-    port: 443
+    server: yd1.992688.xyz
+    port: 8080
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
+    uuid: b390dfa3-b095-4373-ce80-ca2463978c96
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1695380351751
+      path: /?ed=2048
       headers:
-        host: www.64830206.xyz
-  - &id008
-    name: 🇺🇸_US_美国->🇻🇳_VN_越南
+        host: eu2.vpn66.eu.org
+  - &id002
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: trojan
+    server: jjozz-1092-tr-8.r-kcd-b.iote.bond
+    port: 39919
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: cdn.cjhh.lol
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
     type: vmess
-    server: Tokyo.mfa.ee
-    port: 2052
+    server: 120.226.50.94
+    port: 40702
     cipher: auto
-    uuid: 992889a7-296e-4a44-98c2-0eb89af4411d
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: ru1a.ai88888.top
+    port: 80
+    cipher: auto
+    uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ru1a-Rayj8xxW9bW
+      headers:
+        host: ru1a.ai88888.top
+  - &id005
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 156.225.67.48
+    port: 45493
+    cipher: auto
+    uuid: 3ca912da-6ac2-418f-b9cf-45b6f694579b
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: www.speedtest.net
+    port: 80
+    cipher: auto
+    uuid: bf75108e-7bec-4fe0-8db9-3d4985dd3bd6
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -76,73 +81,29 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: vnpt.iiio.wiki
-  - &id009
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: ss
-    server: shdxyh.xn--fiqr9egvchy8d.com
-    port: 38954
-    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
-    cipher: chacha20-ietf-poly1305
-  - &id010
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_5
-    type: ss
-    server: sh-zz-xx.newbluecloud.top
-    port: 17179
-    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
-    cipher: chacha20-ietf-poly1305
-  - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ss
-    server: shdxyh.xn--fiqr9egvchy8d.com
-    port: 12363
-    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
-    cipher: chacha20-ietf-poly1305
-  - &id012
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_6
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 24961
-    password: d2258ec0-2c7b-4dbc-9355-4dade1943e84
-    cipher: chacha20-ietf-poly1305
-  - &id013
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_7
-    type: ss
-    server: starspeed.tbh.iosds.com
-    port: 26963
-    password: 45fbf02e-b550-456d-b14a-bf123410e997
-    cipher: chacha20-ietf-poly1305
-  - &id014
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 142.4.112.150
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
+        host: it1.xv2ray.net
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: 14.18.108.108
+    port: 41929
+    udp: true
+    password: 09833a6f-4d46-426e-87fe-7793a5489f84
+    sni: nl01.lovehjq.xyz
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695380351751
-      headers:
-        host: www.67023582.xyz
-  - &id015
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ss
-    server: shdxyh.xn--fiqr9egvchy8d.com
-    port: 42797
-    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
-    cipher: chacha20-ietf-poly1305
-  - &id016
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_8
-    type: ss
-    server: shdxyh.xn--fiqr9egvchy8d.com
-    port: 40998
-    password: ad45a324-03ab-4c71-ba4f-d1479b8ccdce
-    cipher: chacha20-ietf-poly1305
-  - &id017
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
+    network: tcp
+  - &id008
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: ko2.lianpi.xyz
+    port: 64123
+    udp: true
+    password: a0043275-5033-4923-9f22-b2f466a8794a
+    sni: apple.com
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
     type: trojan
     server: zjpvc-1083-tr-0.r-kcd-b.tuil.xyz
     port: 29969
@@ -151,214 +112,132 @@ proxies:
     sni: cdn.cjhh.lol
     skip-cert-verify: true
     network: tcp
-  - &id018
-    name: 🇨🇦_CA_加拿大_1
+  - &id010
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
     type: trojan
-    server: 108.181.24.47
-    port: 443
+    server: zz.chaosu999.com
+    port: 40350
     udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 20-24-33-134.nhost.00cdn.com
+    password: ff0675b0-c665-3d69-800b-f7fc29e1ead8
+    sni: chaosujp.ccoo520.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 107.167.30.132
+    port: 43900
+    cipher: auto
+    uuid: 58e560b4-bba6-4843-be5f-83321022fa0d
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 192.74.234.220
+    port: 31315
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇭🇰_HK_香港
+    type: vmess
+    server: hkt.123ddns.xyz
+    port: 55455
+    cipher: auto
+    uuid: d2ce45e6-9f22-492d-d81d-d639067a7583
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hkt.123ddns.xyz
+  - &id014
+    name: 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
+    type: vmess
+    server: cn-guangzhou.applebench.tech
+    port: 18353
+    cipher: auto
+    uuid: a0043275-5033-4923-9f22-b2f466a8794a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 192.74.238.232
+    port: 41772
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id017
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: sbl4.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl4.shabijichang.com
+  - &id018
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: ci.outline-vpn.cloud
+    port: 43123
+    cipher: auto
+    uuid: 2566d00f-218c-48f7-9a36-13d3d6f1a724
+    alterId: 64
+    tls: false
     skip-cert-verify: true
     network: tcp
   - &id019
-    name: 🇨🇦_CA_加拿大_2
-    type: trojan
-    server: 108.181.23.123
-    port: 443
-    udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 20-24-33-134.nhost.00cdn.com
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: vmess
+    server: vip.basicnode.host
+    port: 16627
+    cipher: auto
+    uuid: 4aa447d6-744b-32f9-9a8f-a39ca2f89b60
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /niuniu
+      headers:
+        host: 193.25.215.160
   - &id020
-    name: 🇯🇵_JP_日本
-    type: ss
-    server: 43.207.233.98
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id021
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: 163.123.192.80
-    port: 443
-    udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 4-193-163-88.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 163.123.192.79
-    port: 443
-    udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 4-193-163-88.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇨🇦_CA_加拿大_3
-    type: trojan
-    server: 108.181.23.231
-    port: 443
-    udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇨🇦_CA_加拿大_4
-    type: trojan
-    server: 108.181.22.249
-    port: 443
-    udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 4-193-163-88.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id025
-    name: 🇨🇦_CA_加拿大_5
-    type: trojan
-    server: 108.181.23.241
-    port: 443
-    udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇨🇦_CA_加拿大_6
-    type: trojan
-    server: 108.181.23.71
-    port: 443
-    udp: true
-    password: 89ce124f-42d1-4c90-b9d2-bde2861ae615
-    sni: 4-193-163-88.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇯🇵_JP_日本->🇸🇬_SG_新加坡
-    type: trojan
-    server: 1gzdx2.156786.xyz
-    port: 37905
-    udp: true
-    password: 98bae868-4f00-40e0-9603-8d848644ec44
-    sni: hkmax06.170203.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: trojan
-    server: rpete-1096-tr-3.r-kcd-e.iote.bond
-    port: 29989
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: cdn.cjhh.lol
-    skip-cert-verify: true
-    network: tcp
-  - &id029
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: ahsorathiyaa.fly.dev
-    port: 443
-    cipher: auto
-    uuid: de04add9-5c68-8bab-950c-08cd5320df18
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ahsorathiyaa.fly.dev
-  - &id030
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: yd1.992688.xyz
-    port: 8880
-    cipher: auto
-    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: vceu3.vpn66.eu.org
-  - &id031
-    name: 🇭🇰_HK_香港
-    type: vmess
-    server: 156.245.8.248
-    port: 41671
-    cipher: auto
-    uuid: 964bf499-9ec0-4378-92b6-87d8d861b2d0
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id032
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 137.175.18.84
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695380351751
-      headers:
-        host: www.66273264.xyz
-  - &id033
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 45.199.138.219
-    port: 55007
-    cipher: auto
-    uuid: 130c9f2e-42b1-4ebf-b345-e26456a061f9
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id034
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: vmess
-    server: 36.137.179.162
-    port: 50007
-    cipher: auto
-    uuid: 120cadf2-e254-4069-97b2-acd33cfc4f3f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id035
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 45.199.138.214
-    port: 44478
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id036
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 36.140.102.11
-    port: 50020
-    cipher: auto
-    uuid: 120cadf2-e254-4069-97b2-acd33cfc4f3f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id037
     name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
     type: vmess
     server: cf.yx.alue.link
@@ -373,6 +252,125 @@ proxies:
       path: /
       headers:
         host: lu.wx.alue.link
+  - &id021
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 8880
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      headers:
+        host: fr7.tehme100.fun
+  - &id022
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: tunneltransfer.bpyjc.com
+    port: 2086
+    cipher: auto
+    uuid: 1eb9109d-775d-4636-a895-2950bc500af9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: us.bpyjc.com
+  - &id023
+    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
+    type: vmess
+    server: cdn.chigua.tk
+    port: 80
+    cipher: auto
+    uuid: 7e7f8398-bd39-49d8-9ce6-e48ffef463dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /2TokGE9A/
+      headers:
+        host: us6.cachexy.cf
+  - &id024
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: hdlb4.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 70a93fcb-f8c0-4916-96b5-8c54f3394708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hdlb4.shabijichang.com
+  - &id025
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 104.24.184.134
+    port: 80
+    cipher: auto
+    uuid: 6388bd92-6cbc-4b72-a9a6-931f071d0ffa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /phosphorylative.aurorainiceland.com/nimvws
+      headers:
+        host: erfannewfreenodes.vdmmswyzmzigonvnjk443.workers.dev
+  - &id026
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: tunneltransfer.bpyjc.com
+    port: 2052
+    cipher: auto
+    uuid: 1eb9109d-775d-4636-a895-2950bc500af9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: us.bpyjc.com
+  - &id027
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
+    type: trojan
+    server: fgddt-1082-tr-4.r-kcd-a.tuil.xyz
+    port: 39909
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: s3.cjhh.beauty
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇺🇸_US_美国_12
+    type: trojan
+    server: 209.216.77.26
+    port: 443
+    udp: true
+    password: 3550ce3dec
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_4
+    type: trojan
+    server: rpete-1096-tr-3.r-kcd-e.iote.bond
+    port: 29989
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: cdn.cjhh.lol
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -428,14 +426,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -470,14 +460,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
   - name: SELECT
     type: select
     proxies:
@@ -510,14 +492,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
